--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     border: none;
     outline: none;
     background: none;
-    font-size: 1.6rem;
+    font-size: 1rem;
     border-bottom: 2px solid rgb(66, 61, 61);
 
 }
@@ -72,17 +72,18 @@ body {
 .formSearch form input ::placeholder {
     color: rgb(28, 25, 22);
 
+
 }
 
 .formSearch form button {
 
     padding: 1rem;
-    width: 19%;
+    width: 6rem;
     border-bottom: 1px solid;
     border: none;
     outline: none;
     background: none;
-    font-size: 1rem;
+
     background-color: brown;
     color: aliceblue;
     border-radius: .3rem;
@@ -128,11 +129,13 @@ body {
     background-color: rgb(239, 211, 160);
     width: 14rem;
     padding: 1rem;
-
+    height: 100%;
 
     margin: 1rem;
     box-shadow: 5px 5px 5px black;
     border-radius: 2rem;
+    position: relative;
+    overflow: hidden;
 
 
 }
@@ -176,4 +179,46 @@ body {
     font-size: 2rem;
     margin-top: 1rem;
     text-align: center;
+}
+
+.country {
+    position: absolute;
+
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    max-height: 100%;
+    transform: translateY(100%);
+    transition: transform 0.8s ease-in-out;
+
+    background-color: rgba(248, 205, 120, 0.701);
+    width: 14rem;
+    padding: 1rem;
+
+    color: rgb(84, 80, 80);
+
+    box-shadow: 5px 5px 5px black;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.country img {
+    width: 80%;
+    margin-bottom: .5rem;
+    box-shadow: 5px 5px 5px black;
+    border-radius: 10%;
+}
+
+.country .countryName {
+    font-size: 1.3rem;
+
+}
+
+.city:hover .country {
+    transform: translateY(0%);
 }
