--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ body {
     width: 8rem;
     margin: 2rem;
     text-align: center;
-    padding: .6rem;
+    padding: .2rem;
     box-shadow: 1px 1px 1px black;
     border-radius: 1rem;
 }
 
 .aktuel p {
-    margin-top: .3rem;
+    margin-top: .1rem;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     font-size: .8rem;
@@ -129,8 +129,7 @@ body {
     background-color: rgb(239, 211, 160);
     width: 14rem;
     padding: 1rem;
-    height: 100%;
-
+    height: 18rem;
     margin: 1rem;
     box-shadow: 5px 5px 5px black;
     border-radius: 2rem;
@@ -190,15 +189,16 @@ body {
     overflow: hidden;
     max-height: 100%;
     transform: translateY(100%);
-    transition: transform 0.8s ease-in-out;
+    transition: transform 1.5s ease-in-out;
 
-    background-color: rgba(248, 205, 120, 0.701);
+    background-color: rgba(228, 215, 187, 0.861);
     width: 14rem;
     padding: 1rem;
 
-    color: rgb(84, 80, 80);
+    color: rgb(33, 1, 1);
 
     box-shadow: 5px 5px 5px black;
+    text-shadow: 1px 1px rgb(224, 220, 220);
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
@@ -221,4 +221,75 @@ body {
 
 .city:hover .country {
     transform: translateY(0%);
+}
+
+.city:hover .city p {
+    opacity: .1;
+}
+
+.date {
+    font-size: 1rem;
+    font-weight: 700;
+    text-decoration: underline;
+
+}
+
+@media(max-width:400px) {
+    .formSearch {
+
+        width: 90%;
+
+    }
+
+    .formSearch form input {
+
+
+        width: 90%;
+
+
+    }
+
+
+
+    .formSearch form button {
+
+
+        font-size: .7rem;
+        margin-left: .6rem;
+
+    }
+
+    .aktuel {
+        background-color: rgba(250, 235, 215, 0.34);
+        width: 5rem;
+        margin: 2rem;
+        text-align: center;
+        padding: .2rem;
+        box-shadow: 1px 1px 1px black;
+        border-radius: 1rem;
+    }
+
+    .aktuel p {
+        margin-top: .1rem;
+
+        font-size: .5rem;
+    }
+
+    .aktuel img {
+        width: 3rem;
+    }
+
+    .aktuel .cityTemp {
+        font-size: .9rem;
+    }
+
+    .aktuel .cityName {
+        font-size: .7rem;
+        margin-top: .2rem;
+    }
+
+    .date {
+        font-size: .7rem;
+        font-weight: 700;
+    }
 }
