--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ body {
     width: 8rem;
     margin: 2rem;
     text-align: center;
-    padding: .2rem;
+    padding: .6rem;
     box-shadow: 1px 1px 1px black;
     border-radius: 1rem;
 }
 
 .aktuel p {
-    margin-top: .1rem;
+    margin-top: .3rem;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     font-size: .8rem;
@@ -64,8 +64,10 @@ body {
     border: none;
     outline: none;
     background: none;
-    font-size: 1rem;
+    font-size: 1.6rem;
     border-bottom: 2px solid rgb(66, 61, 61);
+    color: aliceblue;
+
 
 }
 
@@ -129,6 +131,7 @@ body {
     background-color: rgb(239, 211, 160);
     width: 14rem;
     padding: 1rem;
+    height: 100%;
     height: 18rem;
     margin: 1rem;
     box-shadow: 5px 5px 5px black;
@@ -189,16 +192,15 @@ body {
     overflow: hidden;
     max-height: 100%;
     transform: translateY(100%);
-    transition: transform 1.5s ease-in-out;
+    transition: transform 0.8s ease-in-out;
 
-    background-color: rgba(228, 215, 187, 0.861);
+    background-color: rgba(248, 205, 120, 0.701);
     width: 14rem;
     padding: 1rem;
 
-    color: rgb(33, 1, 1);
+    color: rgb(84, 80, 80);
 
     box-shadow: 5px 5px 5px black;
-    text-shadow: 1px 1px rgb(224, 220, 220);
     border-radius: 2rem;
     display: flex;
     flex-direction: column;
@@ -223,73 +225,19 @@ body {
     transform: translateY(0%);
 }
 
-.city:hover .city p {
-    opacity: .1;
-}
+.map {
+    text-decoration: none;
+    padding: .4rem;
+    width: 6rem;
+    border-bottom: 1px solid;
+    border: none;
+    outline: none;
+    background: none;
+    margin: .8rem .4rem;
+    background-color: brown;
+    color: aliceblue;
+    border-radius: .3rem;
+    font-size: .8rem;
+    cursor: pointer;
 
-.date {
-    font-size: 1rem;
-    font-weight: 700;
-    text-decoration: underline;
-
-}
-
-@media(max-width:400px) {
-    .formSearch {
-
-        width: 90%;
-
-    }
-
-    .formSearch form input {
-
-
-        width: 90%;
-
-
-    }
-
-
-
-    .formSearch form button {
-
-
-        font-size: .7rem;
-        margin-left: .6rem;
-
-    }
-
-    .aktuel {
-        background-color: rgba(250, 235, 215, 0.34);
-        width: 5rem;
-        margin: 2rem;
-        text-align: center;
-        padding: .2rem;
-        box-shadow: 1px 1px 1px black;
-        border-radius: 1rem;
-    }
-
-    .aktuel p {
-        margin-top: .1rem;
-
-        font-size: .5rem;
-    }
-
-    .aktuel img {
-        width: 3rem;
-    }
-
-    .aktuel .cityTemp {
-        font-size: .9rem;
-    }
-
-    .aktuel .cityName {
-        font-size: .7rem;
-        margin-top: .2rem;
-    }
-
-    .date {
-        font-size: .7rem;
-        font-weight: 700;
-    }
 }
